--- a/watchdog_client_nodejs_demo/.gitignore
+++ b/watchdog_client_nodejs_demo/.gitignore
@@ -1,30 +1,3 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-####################
-# NODE JS GITIGNORE#
-####################
 # Logs
 logs
 *.log
@@ -141,3 +114,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# log files
+*.log
