pre-test watchdog client

--- a/watchdog_client_nodejs_demo/src/package.json
+++ b/watchdog_client_nodejs_demo/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logger",
+  "name": "watchdog_logger",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "journalctl": "^1.1.0",
     "tailing-stream": "^0.2.0"
   }
 }
