--- a/watchdog_server/pom.xml
+++ b/watchdog_server/pom.xml
@@ -121,16 +121,11 @@
 			<version>8.0.20</version>
 		</dependency>
 
-		<dependency>
+		<!--dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.199</version>
-		</dependency>
-		<!-- DB Middleware -->
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
@@ -145,16 +140,6 @@
 			<version>2.3.3.RELEASE</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>5.2.8.RELEASE</version>
-			<type>jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 	</dependencies>
 
 
