--- a/watchdog_server/pom.xml
+++ b/watchdog_server/pom.xml
@@ -107,12 +107,12 @@
 		</dependency>
 
 		<!--Validation-->
-		<dependency>
+		<!--dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 			<type>jar</type>
-		</dependency>
+		</dependency-->
 
 		<!--MySQL-->
 		<dependency>
@@ -127,12 +127,12 @@
 			<version>1.4.199</version>
 		</dependency-->
 
-		<dependency>
+		<!--dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>2.2.3</version>
 			<type>jar</type>
-		</dependency>
+		</dependency-->
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
