--- a/watchdog_client_nodejs_demo/src/settings/settings_copy.json
+++ b/watchdog_client_nodejs_demo/src/settings/settings_copy.json
@@ -1,16 +1,20 @@
 {
-    "credentials":{
+    "credentials": {
         "username": "user",
         "password": "password"
     },
-    "address":{
-        "baseurl":"http://localhost",
-        "port":"8080",
-        "baseapi":"/api/v1"
+    "address": {
+        "baseurl": "http://localhost",
+        "port": "8080",
+        "baseapi": "/api/v1"
     },
-    "time":{
-        "comment":"in seconds how long a jwt is valid",
-        "comment2":"60*60*10 in sec",
+    "time": {
+        "comment": "in seconds how long a jwt is valid",
+        "comment2": "60*60*10 in sec",
         "jwt_timeframe": 36000
+    },
+    "env": {
+        "apache2": true,
+        "ssh": true
     }
 }
